Fix z-indexes in Portfolio iPad item

--- a/components/VerkkokauppaCom/index.module.css
+++ b/components/VerkkokauppaCom/index.module.css
@@ -154,14 +154,16 @@
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
-  z-index: -1;
+  z-index: 1;
 }
 
 .ipadText {
   color: white;
   margin: 1rem auto;
   max-width: 480px;
+  position: relative;
   text-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  z-index: 2;
 }
 
 .ipadTextHeading {
